Add github link

--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Spelling Beat</title>
     
-        <script src="spelling-beat.js"></script>
-        <link rel="stylesheet" href="bulma-min.css">
+        <script src="js/spelling-beat.js"></script>
+        <link rel="stylesheet" href="css/bulma-min.css">
         <!-- <link rel="stylesheet" href="pure-min.css"> -->
         <!-- <link href="milligram.min.css" rel="stylesheet"> -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    <section class="section">
-        <div class="container">
+
+        <section class="section">
+            <div class="container">
+
+            <div class="is-pulled-right pt-4">
+                <a href="https://github.com/bgreenlee/spelling-beat">
+                    <img src="images/github.svg" alt="github" width="32" height="32">
+                </a>
+            </div>
+
             <h1 class="title">Spelling Beat</h1>
             <p class="subtitle">
-                For when you're desperate to solve <a href="https://www.nytimes.com/puzzles/spelling-bee">everyone's favorite spelling puzzle</a>.
-            </p>
+              For when you're desperate to solve <a href="https://www.nytimes.com/puzzles/spelling-bee">everyone's favorite spelling puzzle</a>.
+            </p> 
 
             <label class="label">Letters (required first)</label>
             <div class="field has-addons">
