--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <input class="input" type="text" id="letters" minlength="7" maxlength="7">
                 </div>
                 <div class="control">
-                    <a  class="button is-primary" onclick="solve()">Solve</a>
+                    <a id="solve-button" class="button is-primary" disabled onclick="solve()">Solve</a>
                 </div>
             </div>
 
