--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
         <title>Spelling Beat</title>
     
         <script src="js/spelling-beat.js"></script>
-        <link rel="stylesheet" href="css/bulma-min.css">
-        <!-- <link rel="stylesheet" href="pure-min.css"> -->
-        <!-- <link href="milligram.min.css" rel="stylesheet"> -->
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -18,7 +15,7 @@
 
             <div class="is-pulled-right pt-4">
                 <a href="https://github.com/bgreenlee/spelling-beat">
-                    <img src="images/github.svg" alt="github" width="32" height="32">
+                    <img src="images/github.svg" class="github-logo" alt="github" width="32" height="32">
                 </a>
             </div>
 
