--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div id="words"></div>
+            <div id="words" class="words"></div>
         </div>
     </section>
     </body>
