--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <label class="label">Letters (required first)</label>
             <div class="field has-addons">
                 <div class="control">
-                    <input class="input" type="text" id="letters" minlength="7" maxlength="7">
+                    <input class="input" type="text" id="letters" minlength="7" maxlength="7" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                 </div>
                 <div class="control">
                     <a id="solve-button" class="button is-primary" disabled onclick="solve()">Solve</a>
