--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Spelling Beat</title>
     
-        <script src="js/spelling-beat.js"></script>
+        <script src="js/application.js"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
