--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     
         <script src="js/application.js"></script>
         <link rel="stylesheet" href="css/style.css">
+
+        <!-- Favicons -->
+        <link rel="icon" href="images/favicon-32.png" sizes="32x32">
+        <link rel="icon" href="images/favicon-128.png" sizes="128x128">
+        <link rel="icon" href="images/favicon-192.png" sizes="192x192">
+        <!-- iOS -->
+        <link rel="apple-touch-icon" href="images/favicon-152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="images/favicon-167.png" sizes="167x167">
+        <link rel="apple-touch-icon" href="images/favicon-180.png" sizes="180x180">
+        <!-- Android -->
+        <link rel="shortcut icon" sizes="196x196" href="images/favicon-196.png">
     </head>
     <body>
 
@@ -19,19 +30,27 @@
                 </a>
             </div>
 
-            <h1 class="title">Spelling Beat</h1>
-            <p class="subtitle">
-              For when you're desperate to solve <a href="https://www.nytimes.com/puzzles/spelling-bee">everyone's favorite spelling puzzle</a>.
-            </p> 
+            <div class="columns is-mobile">
+                <div class="column is-1">
+                    <img src="images/bee-logo-128.png" alt="bee logo">
+                </div>
+                <div class="column">
+                    <h1 class="title">Spelling Beat</h1>
+                    <p class="subtitle">
+                    For when you're desperate to solve <a href="https://www.nytimes.com/puzzles/spelling-bee">everyone's favorite spelling puzzle</a>.
+                    </p> 
 
-            <label class="label">Letters (required first)</label>
-            <div class="field has-addons">
-                <div class="control">
-                    <input class="input" type="text" id="letters" minlength="7" maxlength="7" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+                    <label class="label">Letters (required first)</label>
+                    <div class="field has-addons">
+                        <div class="control">
+                            <input class="input" type="text" id="letters" minlength="7" maxlength="7" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+                        </div>
+                    </div>
+
+                    <div id="words" class="words"></div>
                 </div>
             </div>
 
-            <div id="words" class="words"></div>
         </div>
     </section>
     </body>
