--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </a>
             </div>
 
-            <div class="columns is-mobile">
-                <div class="column is-1">
-                    <img src="images/bee-logo-128.png" alt="bee logo">
+            <div class="columns">
+                <div class="column is-narrow">
+                    <img src="images/bee-logo-160.png" alt="bee logo" width="97">
                 </div>
                 <div class="column">
                     <h1 class="title">Spelling Beat</h1>
