Update to use NWL2020

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 </head>
 
 <body>
-    <section class="section">
-
+    <section class="section main-content">
         <div class="columns is-mobile">
             <div class="column is-narrow">
                 <div class="is-pulled-left">
@@ -47,14 +46,24 @@
                 <div class="field has-addons">
                     <div class="control">
                         <input class="input" type="text" id="letters" minlength="7" maxlength="7" autocomplete="off"
-                            autocorrect="off" autocapitalize="off" spellcheck="false">
+                            autocorrect="off" autocapitalize="off" spellcheck="false" autofocus>
                     </div>
                 </div>
 
                 <div id="words" class="words"></div>
             </div>
         </div>
-    </section>
+        </section>
+
+        <footer>
+            <div class="content has-text-centered">
+                <p>
+                    &copy; 2021 <a href="https://footle.org">Brad Greenlee</a>. <a href="https://github.com/bgreenlee/spelling-beat">Source code</a> licensed
+                    <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.<br>
+                    <a href="http://www.scrabbleplayers.org">NASPA Word List 2020 Edition</a> &copy; NASPA 2020. The copy included in this app is licensed for personal use. You may not use it for any commercial purposes.
+                </p>
+            </div>
+        </footer>
 </body>
 
 </html>
