--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </div>
 
                 <div id="words" class="words"></div>
+                <div id="score" class="score"></div>
             </div>
         </div>
         </section>
